------------------------------------------------------------------------
0.03 | Piotr Roszatycki <dexter@debian.org> | 2008-12-08

* Requires parent module instead base.

------------------------------------------------------------------------
0.0203 | Piotr Roszatycki <dexter@debian.org> | 2008-04-09

* Works with the latest Moose::make_immutable method.

------------------------------------------------------------------------
0.0202 | Piotr Roszatycki <dexter@debian.org> | 2007-11-03

Fixes:

* Do not use Exception::Base for tests.

------------------------------------------------------------------------
0.0201 | Piotr Roszatycki <dexter@debian.org> | 2007-11-01

* Build requires Test::Unit::Lite >= 0.07.

------------------------------------------------------------------------
0.02 | Piotr Roszatycki <dexter@debian.org> | 2007-10-03

* New overrided methods: deinitialize_slot, is_slot_initialized,
  weaken_slot_value.
* New test units.
* Fix version number for MooseX::GlobRef::Meta::Instance module.
* Build README with Module::Build.

------------------------------------------------------------------------
0.01 | Piotr Roszatycki <dexter@debian.org> | 2007-09-27

* First CPAN release.

------------------------------------------------------------------------