@@ -19,6 +19,7 @@ my $build = Module::Build->new(
     },
     build_requires => {
         'Test::Unit::Lite'   => 0.07,
+        'Test::Assert'       => 0,
     },
     create_makefile_pl => 'traditional',
     create_readme => 1,
