@@ -1,8 +1,9 @@
 package MooseX::GlobRef::Meta::InstanceImmutableTest;
 
 use parent 'Test::Unit::TestCase';
+use Test::Assert ':all';
 
-use Scalar::Util;
+use Scalar::Util 'reftype';
 
 
 {
@@ -23,20 +24,20 @@ use Scalar::Util;
 sub test_MooseX_GlobRef_Meta_Instance___isa {
     my $self = shift;
     my $obj = MooseX::GlobRef::Meta::InstanceImmutableTest::Test1->new;
-    $self->assert_not_null($obj);
-    $self->assert($obj->isa('MooseX::GlobRef::Meta::InstanceImmutableTest::Test1'));
-    $self->assert_equals('GLOB', Scalar::Util::reftype($obj));
-    $self->assert_equals('HASH', Scalar::Util::reftype(${*$obj}));
+    assert_not_null($obj);
+    assert_true($obj->isa('MooseX::GlobRef::Meta::InstanceImmutableTest::Test1'));
+    assert_equals('GLOB', reftype($obj));
+    assert_equals('HASH', reftype(${*$obj}));
 };
 
 sub test_MooseX_GlobRef_Meta_Instance_accessor {
     my $self = shift;
     my $obj = MooseX::GlobRef::Meta::InstanceImmutableTest::Test1->new(field => $$);
-    $self->assert_not_null($obj);
-    $self->assert($obj->isa('MooseX::GlobRef::Meta::InstanceImmutableTest::Test1'));
-    $self->assert_equals($$, $obj->field);
-    $self->assert_equals(1, $obj->field(1));
-    $self->assert_equals(1, $obj->field);
+    assert_not_null($obj);
+    assert_true($obj->isa('MooseX::GlobRef::Meta::InstanceImmutableTest::Test1'));
+    assert_equals($$, $obj->field);
+    assert_equals(1, $obj->field(1));
+    assert_equals(1, $obj->field);
 };
 
 1;
