@@ -1,8 +1,9 @@
 package MooseX::GlobRef::ObjectImmutableTest;
 
 use parent 'Test::Unit::TestCase';
+use Test::Assert ':all';
 
-use Scalar::Util;
+use Scalar::Util 'reftype';
 
 
 {
@@ -30,87 +31,87 @@ use Scalar::Util;
 sub test_MooseX_GlobRef_Object___isa {
     my $self = shift;
     my $obj = MooseX::GlobRef::ObjectImmutableTest::Test1->new;
-    $self->assert_not_null($obj);
-    $self->assert($obj->isa('MooseX::GlobRef::ObjectImmutableTest::Test1'));
-    $self->assert_equals('GLOB', Scalar::Util::reftype($obj));
-    $self->assert_equals('HASH', Scalar::Util::reftype(${*$obj}));
+    assert_not_null($obj);
+    assert_true($obj->isa('MooseX::GlobRef::ObjectImmutableTest::Test1'));
+    assert_equals('GLOB', reftype($obj));
+    assert_equals('HASH', reftype(${*$obj}));
 };
 
 sub test_MooseX_GlobRef_Object__moose {
     my $self = shift;
     my $obj = MooseX::GlobRef::ObjectImmutableTest::Test1->new;
-    $self->assert_not_null($obj);
-    $self->assert($obj->isa('MooseX::GlobRef::ObjectImmutableTest::Test1'));
-    $self->assert_equals('default', $obj->field);
-    $self->assert_equals(1, $obj->field(1));
-    $self->assert_equals(1, $obj->field);
-    $self->assert($obj->clear_field);
-    $self->assert_equals('default', $obj->field);
+    assert_not_null($obj);
+    assert_true($obj->isa('MooseX::GlobRef::ObjectImmutableTest::Test1'));
+    assert_equals('default', $obj->field);
+    assert_equals(1, $obj->field(1));
+    assert_equals(1, $obj->field);
+    assert_true($obj->clear_field);
+    assert_equals('default', $obj->field);
 };
 
 sub test_MooseX_GlobRef_Object__moc {
     my $self = shift;
     my $mi = MooseX::GlobRef::ObjectImmutableTest::Test1->meta->get_meta_instance;
-    $self->assert_not_null($mi);
+    assert_not_null($mi);
 
     my $obj = $mi->create_instance;
-    $self->assert_not_null($obj);
-    $self->assert($obj->isa('MooseX::GlobRef::ObjectImmutableTest::Test1'));
-    $self->assert_null($mi->get_slot_value($obj, 'field'));
-    $self->assert(! $mi->is_slot_initialized($obj, 'field'));
-    $self->assert_equals(1, $mi->set_slot_value($obj, 'field', 1));
-    $self->assert_equals(1, $mi->get_slot_value($obj, 'field'));
-    $self->assert($mi->is_slot_initialized($obj, 'field'));
-    $self->assert($mi->deinitialize_slot($obj, 'field'));
-    $self->assert_null($mi->get_slot_value($obj, 'field'));
-    $self->assert(! $mi->is_slot_initialized($obj, 'field'));
+    assert_not_null($obj);
+    assert_true($obj->isa('MooseX::GlobRef::ObjectImmutableTest::Test1'));
+    assert_null($mi->get_slot_value($obj, 'field'));
+    assert_true(! $mi->is_slot_initialized($obj, 'field'));
+    assert_equals(1, $mi->set_slot_value($obj, 'field', 1));
+    assert_equals(1, $mi->get_slot_value($obj, 'field'));
+    assert_true($mi->is_slot_initialized($obj, 'field'));
+    assert_true($mi->deinitialize_slot($obj, 'field'));
+    assert_null($mi->get_slot_value($obj, 'field'));
+    assert_true(! $mi->is_slot_initialized($obj, 'field'));
 };
 
 sub test_MooseX_GlobRef_Object__moc_inline {
     my $self = shift;
     my $mi = MooseX::GlobRef::ObjectImmutableTest::Test1->meta->get_meta_instance;
-    $self->assert_not_null($mi);
+    assert_not_null($mi);
 
     my $code_create_instance = $mi->inline_create_instance('$class');
-    $self->assert_not_equals('', $code_create_instance);
+    assert_not_equals('', $code_create_instance);
     my $code_get_slot_value = $mi->inline_get_slot_value('$obj', 'field');
-    $self->assert_not_equals('', $code_get_slot_value);
+    assert_not_equals('', $code_get_slot_value);
     my $code_is_slot_initialized = $mi->inline_is_slot_initialized('$obj', 'field');
-    $self->assert_not_equals('', $code_is_slot_initialized);
+    assert_not_equals('', $code_is_slot_initialized);
     my $code_set_slot_value = $mi->inline_set_slot_value('$obj', 'field', '$value');
-    $self->assert_not_equals('', $code_set_slot_value);
+    assert_not_equals('', $code_set_slot_value);
     my $code_deinitialize_slot = $mi->inline_deinitialize_slot('$obj', 'field');
-    $self->assert_not_equals('', $code_deinitialize_slot);
+    assert_not_equals('', $code_deinitialize_slot);
 
     my $obj = eval "my \$class = 'MooseX::GlobRef::ObjectImmutableTest::Test1'; $code_create_instance;";
-    $self->assert_not_null($obj);
-    $self->assert($obj->isa('MooseX::GlobRef::ObjectImmutableTest::Test1'));
-    $self->assert_null(eval $code_get_slot_value);
-    $self->assert(! eval $code_is_slot_initialized);
-    $self->assert_equals(1, eval "my \$value = 1; $code_set_slot_value;");
-    $self->assert_equals(1, eval $code_get_slot_value);
-    $self->assert(eval $code_is_slot_initialized);
-    $self->assert(eval $code_deinitialize_slot);
-    $self->assert_null(eval $code_get_slot_value);
-    $self->assert(! eval $code_is_slot_initialized);
+    assert_not_null($obj);
+    assert_true($obj->isa('MooseX::GlobRef::ObjectImmutableTest::Test1'));
+    assert_null(eval $code_get_slot_value);
+    assert_true(! eval $code_is_slot_initialized);
+    assert_equals(1, eval "my \$value = 1; $code_set_slot_value;");
+    assert_equals(1, eval $code_get_slot_value);
+    assert_true(eval $code_is_slot_initialized);
+    assert_true(eval $code_deinitialize_slot);
+    assert_null(eval $code_get_slot_value);
+    assert_true(! eval $code_is_slot_initialized);
 };
 
 sub test_MooseX_GlobRef_Object__weak {
     my $self = shift;
     my $mi = MooseX::GlobRef::ObjectImmutableTest::Test1->meta->get_meta_instance;
-    $self->assert_not_null($mi);
+    assert_not_null($mi);
     my $obj = MooseX::GlobRef::ObjectImmutableTest::Test1->new;
-    $self->assert_not_null($obj);
-    $self->assert($obj->isa('MooseX::GlobRef::ObjectImmutableTest::Test1'));
-    $self->assert_null($obj->weak_field);
+    assert_not_null($obj);
+    assert_true($obj->isa('MooseX::GlobRef::ObjectImmutableTest::Test1'));
+    assert_null($obj->weak_field);
     {
 	my $scalar = 'SCALAR';
-	$self->assert_not_null($obj->weak_field(\$scalar));
-	$self->assert_not_null($obj->weak_field);
-	$self->assert_equals('SCALAR', ${$obj->weak_field});
+	assert_not_null($obj->weak_field(\$scalar));
+	assert_not_null($obj->weak_field);
+	assert_equals('SCALAR', ${$obj->weak_field});
 	$mi->weaken_slot_value($obj, 'weak_field');
     };
-    $self->assert_null($obj->weak_field);
+    assert_null($obj->weak_field);
 };
 
 1;
